update home page add gaps to content - fix image - add slogan

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+    .grainy {
+      background-image: url('https://grainy-gradients.vercel.app/noise.svg');
+      opacity: 1; 
+      mix-blend-mode: multiply;
+    }
+  }
+  
